  * img: Correct bug in image size calculation code.
  * img: Fix dependency code for full size images.
  * toggle, relativedate: Support templates that add attributes
    to the body tag.
  * Support RPC::XML 0.69's incompatable object instantiation method.
  * mirrorlist: Display nothing if list is empty.
  * Fix a bug that could lead to duplicate links being recorded
    for tags.

 -- Joey Hess <joeyh@debian.org>  Sun, 27 Sep 2009 17:40:03 -0400

ikiwiki (3.14159265) unstable; urgency=low

  * Add complete French basewiki and underlays translation from the Debian
    French l10n team, including Philippe Batailler, Alexandre Dupas, and
    Steve Petruzzello.
  * Expand banned_users; it can now include PageSpecs, which
    allows banning by IP address.
  * underlay: Also allow configuring additional directories to search 
    for template files in.
  * Fix parsing web commits from ipv6 addresses.
  * Add genwrapper hook, that can be used to add code into the C wrapper.
  * cvs: Yeah, ikiwiki even supports CVS now. Plugin contributed by
    Amitai Schlair.
  * Updated Czech translation from Miroslav Kure. Closes: #546223
  * rsync: New plugin that allows pushing the destdir to a remote host
    via rsync or similar. Thanks, Amitai Schlair.
  * auto.setup, auto-blog.setup: Fix sanitization of entered wikiname.
    Closes: #547378

 -- Joey Hess <joeyh@debian.org>  Thu, 24 Sep 2009 18:50:43 -0400

ikiwiki (3.1415926) unstable; urgency=high

  [ Joey Hess ]
  * po: Detect if nowrapi18n can't be passed to po4a, and warn about
    the old version, but continue. Closes: #541205 
  * inline: Avoid use of my $_ as it fails with older perls.
    Closes: #541215
  * Add discussionpage configuration setting.
  * Several optimisations, including speedups to orphans and brokenlinks
    calculation.
  * meta, img: Fix bugs in dependency code. (smcv)
  * Allow building ikiwiki on systems w/o po4a --
    building of the translated underlays will be skipped in this case.